--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
+    "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.6.2",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
