Custom chip blueprints (#17)
* working

* Working recursive

* WIP save circuit

* test initial

* lint

* working to->customChip

* WIP

* working custom chip

* working

* cleanup

* Working tests

* Working tests

* working test

* id gen tests

* Update CI

* CI update

* Initial component tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build package
         run: npm run build
       - name: Run tests
-        run: npm test
+        run: npm run test:unit
       - name: Automated version bump
         uses: "phips28/gh-action-bump-version@master"
         env:
