--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "webpack",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test": "jest --watch",
+    "test:unit": "jest --coverage",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --fix --ext .ts,.tsx"
   },
@@ -32,6 +32,7 @@
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
+    "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.6.2",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
