--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: release
-          build_dir: build
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
