--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "circuit-sim",
   "version": "0.1.0",
-  "description": "",
+  "description": "A digital circuit simulator using React, TypeScript and p5.js",
   "homepage": "http://hasnainroopawalla.github.io/circuit-sim",
   "private": true,
   "scripts": {
