--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
+  "exclude": ["test", "dist", "node_modules"],
   "compilerOptions": {
-    "outDir": "./build/",
+    "outDir": "./dist",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
+    "module": "ES6",
     "jsx": "react",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
