--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0"
-  }
+  },
+  "workspaces": [
+    "src/*"
+  ]
 }
