--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@circuit-sim/events",
+    "name": "@circuit-sim/pubsub",
     "version": "1.0.0",
     "description": "",
     "scripts": {
