--- a/packages/simulator/package.json
+++ b/packages/simulator/package.json
@@ -10,10 +10,6 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
-        "@types/p5": "^1.6.2"
-    },
-    "dependencies": {
-        "p5": "^1.7.0"
-    }
+    "devDependencies": {},
+    "dependencies": {}
 }
