--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,34 +12,6 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
-        "@testing-library/jest-dom": "^6.1.0",
-        "@testing-library/react": "^14.0.0",
-        "@types/jest": "^29.5.3",
-        "@types/node": "^20.5.1",
-        "@types/react": "^18.2.20",
-        "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.5.0",
-        "@typescript-eslint/parser": "^6.5.0",
-        "css-loader": "^6.8.1",
-        "eslint": "^8.48.0",
-        "gh-pages": "^5.0.0",
-        "html-webpack-plugin": "^5.5.3",
-        "jest": "^29.6.2",
-        "jest-canvas-mock": "^2.5.2",
-        "jest-environment-jsdom": "^29.6.2",
-        "style-loader": "^3.3.3",
-        "ts-jest": "^29.1.1",
-        "ts-loader": "^9.4.4",
-        "tsconfig-paths-webpack-plugin": "^4.1.0",
-        "typescript": "^5.1.6",
-        "webpack": "^5.88.2",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.1"
-    },
-    "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.11.0"
-    }
+    "devDependencies": {},
+    "dependencies": {}
 }
