--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest --watch",
     "test:unit": "jest --coverage",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --fix --ext .ts,.tsx"
+    "lint:fix": "eslint . --fix --ext .ts,.tsx",
+    "stats": "npm run stats --workspace @circuit-sim/web"
   },
   "keywords": [
     "react",
@@ -37,6 +38,7 @@
     "@typescript-eslint/parser": "^6.5.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.48.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
