--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
         "location": "start"
       }
     ],
-    "no-alert": "error",
+    "no-alert": "warn",
     "no-duplicate-imports": "error",
     "no-unused-private-class-members": "error",
     "camelcase": "error",
