--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: "18.x"
+          node-version: "20.x"
+
       - name: Install dependencies
-        run: npm install
+        run: yarn install
+
       - name: Build package
-        run: npm run build
+        run: yarn build
+
       - name: Run tests
-        run: npm run test:unit
-      - name: Automated version bump
+        run: yarn test:unit
+
+      - name: Version bump
         uses: "phips28/gh-action-bump-version@master"
         env:
           GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
