--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,20 +4,33 @@ on:
     branches: [master]
 
 jobs:
-  lint-test-build:
+  Pull-Request-CI:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Node
         uses: actions/setup-node@v3
+
         with:
-          node-version: "18.x"
+          node-version: "20.x"
+
       - name: Install dependencies
-        run: npm install
+        run: yarn install
+
       - name: Lint
-        run: npm run lint
+        run: yarn lint
+
       - name: Run tests
-        run: npm run test:unit
+        run: yarn test:unit
+
       - name: Build package
-        run: npm run build
+        run: yarn build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pr-container
+          path: dist
+          retention-days: 10
