--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "react-hooks"],
+  "plugins": ["@typescript-eslint", "filename-rules", "react-hooks"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
@@ -18,12 +18,13 @@
       }
     ],
     "no-alert": "warn",
-    "no-duplicate-imports": "error",
+    "no-duplicate-imports": ["error", { "includeExports": true }],
     "no-unused-private-class-members": "error",
     "camelcase": "error",
     "eqeqeq": "error",
     "@typescript-eslint/member-ordering": "error",
     "arrow-body-style": ["error", "as-needed"],
+    "prefer-const": "error",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -36,7 +37,29 @@
         "ignoreRestSiblings": true
       }
     ],
+    "lines-between-class-members": [
+      "error",
+      {
+        "enforce": [
+          { "blankLine": "always", "prev": "*", "next": "method" },
+          { "blankLine": "always", "prev": "method", "next": "*" },
+          { "blankLine": "always", "prev": "field", "next": "field" }
+        ]
+      },
+      { "exceptAfterSingleLine": true }
+    ],
+    "@typescript-eslint/no-non-null-assertion": "warn",
+    "no-fallthrough": "error",
+    "filename-rules/match": [2, "kebab-case"],
+    "object-shorthand": ["error", "always"],
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "typeLike",
+        "format": ["PascalCase"]
+      }
+    ],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "error"
   }
 }
