--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "start": "npm run start --workspace @circuit-sim/web",
+    "start:prod": "npm run start:prod --workspace @circuit-sim/web",
     "build": "npm run build --workspace @circuit-sim/web",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -51,7 +52,8 @@
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
     "p5": "^1.7.0",
