--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,12 +3,13 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "start": "webpack serve --open",
-        "build": "webpack --mode production",
+        "start": "webpack serve --env NODE_ENV=development --config webpack.dev.js",
+        "start:prod": "webpack serve --env NODE_ENV=production --config webpack.prod.js",
+        "build": "webpack --env NODE_ENV=production --config webpack.prod.js",
         "test": "jest",
         "test:watch": "jest --watch",
         "lint": "eslint . --ext .ts,.tsx",
-        "stats": "webpack --json stats.json --env mode=production --env stats=verbose"
+        "stats": "webpack --json stats.json --env NODE_ENV=production --config webpack.prod.js --env stats=verbose"
     },
     "keywords": [],
     "author": "",
