--- a/package.json
+++ b/package.json
@@ -28,39 +28,40 @@
   "author": "Hasnain Roopawalla",
   "license": "MIT",
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.5.1",
-    "@types/p5": "^1.6.2",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.4",
+    "@types/p5": "^1.7.6",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.48.0",
+    "eslint-plugin-filename-rules": "^1.3.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "gh-pages": "^5.0.0",
-    "html-webpack-plugin": "^5.5.3",
+    "gh-pages": "^6.1.1",
+    "html-webpack-plugin": "^5.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.6.2",
-    "style-loader": "^3.3.3",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.1.6",
-    "webpack": "^5.88.2",
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-dev-server": "^5.1.0",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "p5": "^1.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "p5": "^1.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "workspaces": [
     "packages/*"
