--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^29.6.2",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.6.2",
+    "power-mixin": "^0.0.5",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
