--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Hasnain Roopawalla",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.12",
