--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "jest": "^29.6.2",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.6.2",
-    "power-mixin": "^0.0.5",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
+    "ts-mxn": "^0.0.6",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
