--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -1,15 +1,14 @@
 {
-    "name": "@circuit-sim/pubsub",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "lint": "eslint . --ext .ts,.tsx"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {},
-    "devDependencies": {}
+	"name": "@circuit-sim/pubsub",
+	"version": "1.0.0",
+	"description": "",
+	"scripts": {
+		"test": "jest",
+		"test:watch": "jest --watch"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {},
+	"devDependencies": {}
 }
