--- a/biome.json
+++ b/biome.json
@@ -60,6 +60,6 @@
 	},
 	"assist": {
 		"enabled": true,
-		"actions": { "source": { "organizeImports": "on" } }
+		"actions": { "source": { "organizeImports": "off" } }
 	}
 }
