--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 				"useValidTypeof": "error",
 				"useYield": "error",
 				"useExhaustiveDependencies": "warn",
-				"useHookAtTopLevel": "error"
+				"useHookAtTopLevel": "error",
+				"useUniqueElementIds": "off"
 			},
 			"style": {
 				"useConst": "error",
