--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@digital-logic-sim/simulator": "workspace:^1.0.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
@@ -19,6 +20,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "globals": "^16.4.0",
+    "@tailwindcss/vite": "^4.1.16",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   }
