--- a/packages/render-engine/package.json
+++ b/packages/render-engine/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
+  "dependencies": {
+    "@digital-logic-sim/simulator": "workspace:^1.0.0"
+  },
   "devDependencies": {
     "@webgpu/types": "^0.1.66"
   }
