--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,36 +1,27 @@
-name: Pull Request
+name: Pull Request Validation
 on:
   pull_request:
     branches: [master]
 
 jobs:
-  Pull-Request-CI:
+  PR-validation:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-
-        with:
-          node-version: "20.x"
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
       - name: Run tests
-        run: yarn test:unit
+        run: pnpm test:unit
 
-      - name: Build package
-        run: yarn build
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: pr-container
-          path: dist
-          retention-days: 10
+      # - name: Build package
+      #   run: pnpm build
