--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Run tests
         run: pnpm test:unit
 
-      # - name: Build package
-      #   run: pnpm build
+      - name: Build package
+        run: pnpm build
