--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "test": "vitest"
   },
   "dependencies": {
     "@digital-logic-sim/simulator": "workspace:^1.0.0",
@@ -15,12 +15,20 @@
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.16",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "globals": "^16.4.0",
-    "@tailwindcss/vite": "^4.1.16",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jsdom": "^27.1.0",
+    "ts-jest": "^29.4.5",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   }
