--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "pnpm --filter @digital-logic-sim/web start",
     "build": "pnpm --filter @digital-logic-sim/web build",
-    "test:unit": "pnpm vitest run",
-    "test": "pnpm vitest",
+    "test:unit": "pnpm -r run test",
+    "test": "pnpm -r test",
     "lint": "biome check",
     "lint:fix": "biome check --fix . && biome format --write ."
   },
