Co-authored-by: Abhishek Dewaji <AbDew-20@users.noreply.github.com>

--- a/packages/simulator/package.json
+++ b/packages/simulator/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "dependencies": {
-    "@digital-logic-sim/render-engine": "workspace:^1.0.0"
+    "@digital-logic-sim/render-engine": "workspace:^1.0.0",
+    "wgpu-matrix": "^3.4.0"
   }
 }
