--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-     "target": "ES2023",
+    "target": "ES2023",
     "module": "ESNext",
     "strict": true,
     "strictNullChecks": true,
@@ -11,6 +11,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "jsx": "react-jsx",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": ["node"]
   }
 }
