--- a/packages/simulator/tsconfig.json
+++ b/packages/simulator/tsconfig.json
@@ -1,4 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*", "tests/utils.test.ts"],
+  "include": ["src/**/*", "tests/utils.test.ts"]
 }
+ 
