--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,8 +9,8 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@digital-logic-sim/simulator": "workspace:^1.0.0",
     "@digital-logic-sim/shared-types": "workspace:^1.0.0",
+    "@digital-logic-sim/simulator": "workspace:^1.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.16"
@@ -29,6 +29,7 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^27.1.0",
+    "tailwind-merge": "^3.4.0",
     "ts-jest": "^29.4.5",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
