--- a/packages/simulator/package.json
+++ b/packages/simulator/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@digital-logic-sim/render-engine": "workspace:^1.0.0",
     "@digital-logic-sim/shared-types": "workspace:^1.0.0",
+    "orderedmap": "^2.1.1",
     "wgpu-matrix": "^3.4.0"
   }
 }
