--- a/packages/shared-types/tsconfig.json
+++ b/packages/shared-types/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*"],
   "compilerOptions": {
-    "types": ["@webgpu/types"],
-  }
+    "outDir": "./dist"
+  },
+  "include": ["src"]
 }
