--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "pnpm --filter @digital-logic-sim/web build",
     "test:unit": "pnpm -r run test",
     "test": "pnpm -r test",
-    "lint": "biome check && tsc --noEmit",
+    "lint": "biome check && tsc -p tsconfig.json --noEmit",
     "lint:fix": "biome check --fix . && biome format --write ."
   },
   "keywords": [],
