--- a/packages/render-engine/tsconfig.json
+++ b/packages/render-engine/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*"],
   "compilerOptions": {
-    "types": ["@webgpu/types"],
-  }
+    "outDir": "./dist",
+    "moduleResolution": "bundler",
+    "types": ["@webgpu/types"]
+  },
+  "include": ["src"]
 }
