--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,16 +6,24 @@ on:
 permissions:
   checks: write
   contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
@@ -23,10 +31,18 @@ jobs:
       - name: Build package
         run: pnpm build
 
-      - name: Release
-        uses: crazy-max/ghaction-github-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          target_branch: release
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          path: './dist'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build-release
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
