--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "pnpm --filter @digital-logic-sim/web start",
     "preview": "pnpm --filter @digital-logic-sim/web preview",
-    "build": "pnpm --filter @digital-logic-sim/web build",
+    "build": "pnpm --filter @digital-logic-sim/web build --emptyOutDir",
     "test:unit": "pnpm -r run test",
     "test": "pnpm -r test",
     "lint": "biome check && tsc -p tsconfig.json --noEmit",
