--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "digital-logic-sim",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Digital logic gate simulator using React, TypeScript and WebGPU",
   "main": "index.js",
   "scripts": {
     "start": "pnpm --filter @digital-logic-sim/web start",
     "preview": "pnpm --filter @digital-logic-sim/web preview",
-    "build": "pnpm --filter @digital-logic-sim/web build",
+    "build": "pnpm --filter @digital-logic-sim/web build --emptyOutDir",
     "test:unit": "pnpm -r run test",
     "test": "pnpm -r test",
     "lint": "biome check && tsc -p tsconfig.json --noEmit",
