--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  issues: write
   pull-requests: write
 
 jobs:
@@ -17,5 +18,5 @@ jobs:
       - name: Prepare Release
         uses: googleapis/release-please-action@v4
         with:
-          release-type: node
+          release-type: simple
           token: ${{ secrets.GITHUB_TOKEN }}
