--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -7,6 +7,10 @@ on:
 
 jobs:
   validate-title:
+    if: |
+      github.actor != 'release-please[bot]' &&
+      github.actor != 'github-actions[bot]'
+      
     runs-on: ubuntu-latest
 
     steps:
